<resources>
    <string name="app_name">Fintech App</string>
    <string name="continue_">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_via">Login via</string>
    <string name="signup">Signup</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="next">Next</string>
    <string name="continue_using">or continue using</string>
    <string name="working">Working</string>
    <string name="error_email_empty">Enter your email address.</string>
    <string name="error_invalid">Enter a valid email address.</string>
    <string name="error_email_invalid">Enter a valid email address.</string>
    <string name="error_password_short">Enter a longer password of at least 6 characters.</string>
    <string name="error_password_empty">Enter your password</string>
    <string name="error_tasks_unsuccessful">An error has occured, please try again.</string>
    <string name="error_name_short">Enter a longer name, at least 3 characters.</string>
    <string name="error_name_empty">Enter your name please.</string>
    <string name="error_password_confirm_empty">Please confirm your password.</string>
    <string name="error_password_confirm_invalid">Your passwords don\'t match, please try again.</string>
    <string name="reset_password_information">Enter your email address we\'ll mail you instructions to reset your password.</string>
    <string name="password_reset_success">Password reset email sent!</string>
    <string name="open_email_app">Open email app.</string>
    <string name="facebook_app_id">546148011405923</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="web_client_id">166300344321-4rgmhk3o594o47sv2erthl1tq0q5qehv.apps.googleusercontent.com</string>
    <string name="app_description">The bank of you.\nMake seamless and secure transactions that arrive instantly.</string>
    <string name="signup_enter_email_info">Enter your name &amp; email to setup your account.</string>
    <string name="name">Name</string>
    <string name="signup_enter_password_signup">Enter a strong password to secure your new account.</string>
    <string name="terms_conditions_acceptance"><![CDATA[By continuing, I agree to the Terms & Conditions and Privacy Policy.]]></string>
    <string name="reset">Reset</string>
    <string name="login_view_enter_login_info">Enter your login info to continue.</string>
    <string name="welcome_on_bord">Welcome onBord</string>
    <string name="onboarding_description">Let\'s setup your location so the application can provide you information as you move around.</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="how_we_use_your_location">How do we use your location?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="locating">Locating</string>
    <string name="retry">Retry</string>
    <string name="you">You</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_detail">Tracking Details</string>
    <string name="tracking_details_description">Select a country off the list you want to keep track off.</string>
    <string name="tracking_info">Tracking Information</string>
    <string name="country_info">Country Info</string>
    <string name="select">Select</string>
    <string name="select_country">Select Country</string>
    <string name="select_country_region">Select country/region</string>
    <string name="what_to_track_country">What would you like to keep track of?</string>
    <string name="days_present_in_country">Days I was present in the country</string>
    <string name="days_absent_in_country">Days I was absent from the country</string>
    <string name="days_slept_in_country">Days I slept over in the country</string>
    <string name="tracking_config_description">You\'ll find live statistics on your dashboard based on your selection</string>
    <string name="welcome_back">Welcome back\n%s!</string>
    <string name="restoring_backup_hint">Sit tight while we restore your backed-up data.</string>
    <string name="balance">balance</string>
    <string name="accounts">Accounts</string>
    <string name="new_transfer">New Transfer</string>
    <string name="transactions">Transactions</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_transfer">Create Transfer</string>
    <string name="transfer_description">Please fill in the form to perform your transfer.</string>
    <string name="source_account">Source Account</string>
    <string name="dest_account">Destination account</string>
    <string name="ammount">Ammount</string>
    <string name="ammount_hint">0.00</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="confirm_transfer_message">"You are about to transfer %1$s from %2$s to %3$s."</string>
    <string name="success_transfer_message">"You've just transferred %1$s from %2$s to %3$s."</string>
    <string name="confirm">Confirm</string>
    <string name="transfer_currency_mismatch">Please choose currencies that match each other as we can\'t convert for now.</string>
    <string name="transfer_source_zero">Please pick a source with some money in the account.</string>
    <string name="transfer_source_missing">Please pick a source account.</string>
    <string name="transfer_destination_missing">Please pick a destination account.</string>
    <string name="transfer_amount_missing">Please enter an amount</string>
    <string name="transfer_amount_less">Please enter an amount less than in the source account.</string>
    <string name="success">Success</string>
    <string name="back">Back Home</string>
    <string name="hint_empty_transfers">Your recent transfers will be here</string>
    <string name="hint_empty_accounts">Accounts you add will be here.</string>
    <string name="transfer_same_destination">Please choose two different accounts.</string>
</resources>