<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    android:focusable="true"
    tools:context=".view.transfers.TransferActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/btn_arrow_right"
        app:title="@string/create_transfer"
        app:titleTextColor="@color/white"
        app:contentInsetStart="0dp"
        style="@style/ToolbarTheme"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/transfer_description"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSourceAccount"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="24dp"
        android:textColor="@color/vpd_purple"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/source_account"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSourceAccount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/grey"
        android:text="@string/select"
        android:background="@drawable/btn_transfer_account"
        app:cornerRadius="30dp"
        android:textSize="16sp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableTint="@color/grey_2"
        android:drawableEnd="@drawable/arrow_down_drop_circle"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtSourceAccount"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:minWidth="0dp"
        />

    <TextView
        android:id="@+id/txtDestAccount"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="16dp"
        android:textColor="@color/vpd_purple"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/dest_account"
        app:layout_constraintTop_toBottomOf="@id/btnSourceAccount"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDestAccount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/grey"
        android:text="@string/select"
        android:background="@drawable/btn_transfer_account"
        app:cornerRadius="30dp"
        android:textSize="16sp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableTint="@color/grey_2"
        android:drawableEnd="@drawable/arrow_down_drop_circle"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtDestAccount"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:minWidth="0dp"
        />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="16dp"
        android:textColor="@color/vpd_purple"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/ammount"
        app:layout_constraintTop_toBottomOf="@id/btnDestAccount"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layAmmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtAmount"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:hintEnabled="false"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/edt_hint_light"
        app:passwordToggleTint="@color/edt_hint_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/btn_transfer_account"
            android:gravity="center|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/edt_hint_light"
            android:hint="@string/ammount_hint"
            android:fontFamily="@font/josefin_sans_medium"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContine"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white"
        android:text="@string/continue_"
        android:textAllCaps="true"
        android:background="@drawable/btn_solid_green_rounded"
        app:cornerRadius="28dp"
        android:textSize="16sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/layAmmount"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:minWidth="0dp"
        android:layout_marginStart="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>