<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LandingPageActivity"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@color/transparent"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/btn_arrow_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black"
        />

    <TextView
        android:id="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/country_info"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnClose"
        android:textSize="32sp"
        android:fontFamily="@font/josefin_sans_bold"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/tracking_details_description"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:fontFamily="@font/josefin_sans_semi_bold"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelect"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/black"
        android:text="@string/select_country"
        android:textAllCaps="true"
        android:lines="1"
        android:ellipsize="end"
        android:background="@drawable/btn_landing_stroke_black"
        app:cornerRadius="30dp"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescription"
        android:paddingStart="40dp"
        android:drawableRight="@drawable/chevron_down"
        android:paddingEnd="40dp"
        android:fontFamily="@font/josefin_sans_medium"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintStart_toStartOf="parent"
        android:minWidth="0dp"
        android:layout_marginStart="56dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textAllCaps="true"
        android:background="@drawable/btn_landing_solid_purple"
        app:cornerRadius="30dp"
        android:visibility="invisible"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintStart_toStartOf="parent"
        android:minWidth="0dp"
        android:layout_marginStart="56dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>