<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LandingPageActivity"
    android:clickable="true"
    android:focusable="true"
    android:fitsSystemWindows="true"
    android:background="@color/black">

    <com.yqritc.scalablevideoview.ScalableVideoView
        android:id="@+id/vwVideo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:scalableType="centerCrop"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        android:alpha="0.7"
        />


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        app:tint="@color/white"
        android:layout_marginTop="56dp"
        android:src="@drawable/bank"
        />

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/josefin_sans_bold"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        android:layout_width="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/app_description"
        android:layout_marginBottom="32dp"
        android:textColor="@color/white_half"
        android:textSize="24sp"
        android:fontFamily="@font/josefin_sans_semi_bold"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/black"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:background="@drawable/btn_landing_solid_white"
        app:cornerRadius="30dp"
        android:textSize="16sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:minWidth="0dp"
        android:layout_marginStart="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textAllCaps="true"
        android:background="@drawable/btn_landing_stroke_white"
        app:cornerRadius="30dp"
        android:textSize="16sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSignup"
        android:layout_marginBottom="32dp"
        android:minWidth="0dp"
        android:layout_marginStart="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>