<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:text="@string/success"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/vpd_purple"
        android:fontFamily="@font/josefin_sans_bold"
        android:textAllCaps="true"
        android:layout_height="45dp"/>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/btn_close"
        app:tint="@color/white"
        android:background="?attr/selectableItemBackground"
        android:layout_height="45dp"/>

    <View
        android:id="@+id/vwUnderline"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/txtConfirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_width="0dp"
        android:text="@string/confirm_transfer_message"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/josefin_sans_medium"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white"
        android:text="@string/back"
        android:textAllCaps="true"
        android:background="@drawable/btn_solid_green_rounded"
        app:cornerRadius="28dp"
        android:textSize="16sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtConfirmation"
        android:fontFamily="@font/josefin_sans_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minWidth="0dp"
        android:layout_marginStart="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>