<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.auth.LoginFragment">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@color/transparent"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/btn_arrow_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black"
        />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClose"
        android:src="@drawable/bank"
        app:tint="@color/black"
        />

    <TextView
        android:id="@+id/txtEnter"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"
        android:fontFamily="@font/josefin_sans_medium"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:text="@string/signup_enter_email_info"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginTop="40dp"
        android:id="@+id/layContent"
        app:layout_constraintTop_toBottomOf="@id/txtEnter"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFullName"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_edt_purple_blue_selector"
            android:gravity="center|start"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:lines="1"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textColorHint="@color/edt_hint_light"
            android:hint="@string/name"
            android:fontFamily="@font/josefin_sans_medium"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            >

            <requestFocus/>

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edtFullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_edt_purple_blue_selector"
            android:gravity="center|start"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAllCaps="false"
            android:lines="1"
            android:textColorHint="@color/grey"
            android:hint="@string/email_address"
            android:fontFamily="@font/josefin_sans_medium"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/white"
            android:text="@string/continue_"
            android:textAllCaps="true"
            android:background="@drawable/btn_solid_green_rounded"
            app:cornerRadius="28dp"
            android:textSize="16sp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/josefin_sans_medium"
            app:layout_constraintTop_toBottomOf="@id/edtEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            android:minWidth="0dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/txtContinueUsing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btnNext"
            android:gravity="center"
            android:fontFamily="@font/josefin_sans_medium"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/btnNext"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnNext"
            android:text="@string/continue_using"
            />

        <LinearLayout
            android:id="@+id/laySocial"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/btnNext"
            app:layout_constraintTop_toBottomOf="@id/txtContinueUsing"
            app:layout_constraintEnd_toEndOf="@id/btnNext"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/vwFacebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_auth_facebook"
                android:background="@color/transparent"
                android:foreground="?attr/selectableItemBackground"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/vwGoogle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_auth_google"
                android:layout_marginStart="16dp"
                android:background="@color/transparent"
                android:foreground="?attr/selectableItemBackground" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>